--- a/style.css
+++ b/style.css
@@ -1,11 +1,3 @@
-:root {
-  --text-base: #afb6c2;
-  --text-title: #d4ccb6;
-  --background: #191816;
-  --form-background: #24221f;
-  --primary-color: #ffc632;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -21,27 +13,32 @@ body {
 
 main {
   background: #191816;
-  /* max-width: 50vw; */
-  height: 100vh;
+  min-height: 100%;
+  min-width: 50%;
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: center;
 }
 
 aside {
-  height: 100vh;
-  /* max-width: 100vw; */
+  min-height: 100%;
+  min-width: 50%;
   background-image: url(assets/side-image.jpg);
-  background-position: right;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 .header img {
-  margin-top: 40px;
-  margin-left: 40px;
+  top: 40px;
+  left: 40px;
   cursor: pointer;
+  position: absolute;
 }
 
 form {
-  margin: 126px 74px 194px 74px;
+  max-width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -49,16 +46,24 @@ form {
 }
 
 form fieldset {
+  max-width: 100%;
   border: none;
   padding: 0;
-  margin: 55px 119px;
+  margin: 3.5rem 7.5rem;
   display: flex;
   flex-direction: column;
+  justify-content: left;
+}
+
+legend {
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
 }
 
 legend .title {
   display: flex;
-  gap: 10px;
+  gap: 1.6rem;
   color: #d4ccb6;
   font: 600 1.5rem 'Poppins';
 }
@@ -72,24 +77,36 @@ legend p {
 .email {
   display: flex;
   flex-direction: column;
-  gap: 5px;
+  gap: .8rem;
   margin-top: 27px;
   font: 500 1rem 'Poppins';
   color: #afb6c2;
 }
 
 .email input {
-  width: 335px;
-  height: 44px;
+  color: #a9afb9;
+  max-width: 335px;
+  min-height: 44px;
   background: none;
   border: 1px solid #868686;
   border-radius: 4px;
+  background-image: url(assets/mail.svg);
+  background-position: 12px;
+  background-repeat: no-repeat;
+  padding-left: 37px;
+}
+
+.email input:focus {
+  border: 2px solid #ffc632;
+  box-shadow: 0px 0px 0px 2px #ffde88;
+  outline: 0;
+  background-image: url(assets/mail-focus.svg);
 }
 
 .password {
   display: flex;
   flex-direction: column;
-  gap: 5px;
+  gap: .8rem;
   margin-top: 20px;
   font: 500 1rem 'Poppins';
   color: #afb6c2;
@@ -101,18 +118,23 @@ legend p {
   background: none;
   border: 1px solid #868686;
   border-radius: 4px;
+  background-image: url(assets/lock.svg), url(assets/eye.svg); 
+  background-position: 12px, 303px;
+  background-repeat: no-repeat;
+  padding-left: 37px;
 }
 
 .password input:focus {
   border: 1px solid #ffc632;
-  box-shadow: 0px 0px 0px 2px #FFDE88;
+  outline: 0;
+  box-shadow: 0px 0px 0px 2px #ffde88;
+  background-image: url(assets/lock-focus.svg), url(assets/eye.svg);
 }
 
 .remember {
   display: flex;
-  gap: 75px;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   margin-top: 20px;
 }
 
@@ -127,10 +149,9 @@ legend p {
   gap: 5px;
   color: #a9afb9;
   font: 400 1rem 'Roboto';
-  /* width: fit-content; */
 }
 
-/* .checkbox input{
+.checkbox input{
   all: unset;
   width: 20px;
   height: 20px;
@@ -139,12 +160,20 @@ legend p {
 }
 
 .checkbox input:checked {
-  background: #ffc632;
-} */
+  background-image: url(assets/check.svg);
+  background-color: #ffc632;
+  border: 1px solid #ffc632;
+}
 
-.remember p {
-  font: 500 1rem 'Roboto';
-  color: #afb6c2;
+.checkbox label {
+  color: #a9afb9;
+  font: 400 1rem 'Roboto';
+}
+
+.remember a {
+  font: 600 .875rem 'Poppins';
+  color: #ffc632;
+  text-decoration: none;
 }
 
 button {
@@ -161,6 +190,11 @@ button {
   color: #473404;
   text-transform: uppercase;
   cursor: pointer;
+  transition: all .15s;
+}
+
+button:hover {
+  transform: scale(1.05, 1.05);
 }
 
 .account {
@@ -171,6 +205,8 @@ button {
   font: 400 .875rem 'Poppins';
 }
 
-.account span {
+.account a {
+  color: #ffc632;
   font-weight: 600;
+  text-decoration: none;
 }
