--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ form {
   align-items: center;
   justify-content: center;
   background: #24221f;
+  border-radius: 10px;
 }
 
 form fieldset {
@@ -63,7 +64,7 @@ legend {
 
 legend .title {
   display: flex;
-  gap: 1.6rem;
+  gap: 0.625rem;
   color: #d4ccb6;
   font: 600 1.5rem 'Poppins';
 }
@@ -209,4 +210,67 @@ button:hover {
   color: #ffc632;
   font-weight: 600;
   text-decoration: none;
+}
+
+@media only screen and (min-width: 721px) and (max-width: 1200px){
+  aside {
+    display: none;
+    visibility: 0;
+  }
+
+  main {
+    position: absolute;
+    min-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 451px) and (max-width: 720px){
+  aside {
+    display: none;
+    visibility: 0;
+  }
+ 
+  main {
+    position: absolute;
+    min-width: 100%;
+    min-height: 100%;
+  }
+
+  form {
+    background: none;
+    margin: 168px 20px 211px 20px;
+  }
+ 
+ form fieldset {
+   margin: 0;
+ }
+}
+
+@media screen and (max-width: 450px) {
+ aside {
+   display: none;
+   visibility: 0;
+ }
+
+ main {
+   position: absolute;
+   min-width: 100%;
+ }
+
+.header img {
+  left: 20px;
+}
+
+ form {
+   background: none;
+   margin: 68px 20px 311px 20px;
+ }
+
+form fieldset {
+  margin: 0;
+}
+
+legend .title {
+  font-size: 1.125rem;
+}
 }
